--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="media.css">
@@ -16,6 +17,9 @@
 
 </head>
 <body>
+
+
+    <a id="btt"></a>
     
     <header class="position-fixed ">
     <!--  Nav     -->
@@ -133,17 +137,137 @@
 </section>
 
 
-
-
-
-
-
 <!--END   Section 2-->
+
+
+
+<!--Start  Section 3-->
+
+<section class="section-3 m-5 text-center">
+
+<div class="s-3-h">
+<h1 class="m-3">Sistemden Görüntüler</h1>
+<h5 class="mb-5">Sistemi Merak mı Ediyorsunuz? Hadi Gözatalım.</h5>
+
+
+</div>
+
+
+    <div class="owl-carousel owl-theme">
+        <div class="item slider"><img src="img/ss1.png" alt=""></div>
+        <div class="item slider"><img src="img/ss2.png" alt=""></div>
+        <div class="item slider"><img src="img/ss3.png" alt=""></div>
+        <div class="item slider"><img src="img/ss4.png" alt=""></div>
+        <div class="item slider"><img src="img/ss5.png" alt=""></div>
+        <div class="item slider"><img src="img/ss6.png" alt=""></div>
+        
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</section>
+
+
+
+
+
+
+
+
+
+
+
+<!--End  Section 3-->
+
+
+
+<!--Start  Section 4-->
+
+<section class="section-4 m-4">
+
+<div class="container text-center">
+    <div class="row">
+
+
+
+
+        <div class="col-lg-6 col-sm-12" data-aos="fade-right">
+            <img src="img/section-4-img.png" alt="" class="img-fluid" >
+        </div>
+
+
+        <div class="col-lg-6 col-sm-12 text-start" data-aos="fade-left" >
+            <h1>Havuz Sistemi İle <span class="herkes-guvende">Herkes Güvende!</span></h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum explicabo odio beatae suscipit nam dolor ipsam doloremque sapiente, nulla at nisi odit voluptatibus dolore sint eveniet nihil doloribus provident distinctio.</p>
+            <ul class="s-4-ul">
+                <li class="s-4-li">DENEME</li>
+                <li class="s-4-li">DENEME</li>
+                <li class="s-4-li">DENEME</li>
+                <li class="s-4-li">DENEME</li>
+
+
+
+            </ul>
+        </div>
+
+
+
+
+
+
+
+
+    </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--End  Section 4-->
+
+
+
 
 <!--Scripts-->
 
-
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- Production version -->
     <script src="https://unpkg.com/@popperjs/core@2"></script>
